# test01

./: .gitignore  README.ipynb  README.md  ide_demo.py  intro_tech_tools.ipynb  intro_tech_tools.md  pyproject.toml  requirements.txt  toolchain.sh
sql/: connect.sh  daniehei.csv  example.sql  run_sql.sh
src/greatest_package/: __init__.py  __main__.py  greetings.py  postgres.py
test_greatest_package/: test_dummy.py
