[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "greatest_package"
version = "0.0.1"
authors = [
  { name="Daniel Heimgartner", email="daniel.heimgartner@ivt.baug.ethz.ch" },
]
description = "Hello PuV"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"